2006-01-24 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: swapped 'line' and 'c_str' to make
	  get_short_path() work properly.
	
2006-01-24 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/jfs.cc,
	  src/xfs.cc: replaced translatable string 'umount' with 'unmount'
	  (#328419)

2006-01-24 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* use Glib::get_tmp_dir() instead of hardcoding it as '/tmp'
	* use Glib::find_program_in_path() instead af a system/which combi
	* display current device in windowtitle

2006-01-22 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* correct partitiontype of destination is now set while copying
	* resizing now return correct status (sometimes it would report
	  succes even when some of the suboperationes failed)
	* fixed some issues with resizing and cylindersizes.
	
2006-01-22 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* removed Execute_Command() and replaced it by execute_command().
	  The latter uses Glib::spawn_sync instead of popen().
	  also made the filesystems call execute_command rather than calling
	  Glib::spawn_sync themselves.

2006-01-22 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* implemented Utils::sector_to_unit() and use it in several places
	* (finally) fixed errors with ntfsresizing (had a lot to do with
	  difference between MB and MiB)
	* resizing of reiserfs now shows more detailed feedback
	* support for TebiByte (TiB) unit

2006-01-21 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* changed KB/MB/GB/TB to KiB/MiB/GiB/TiB after reading http://www.iec.ch/zone/si/si_bytes.htm
	
2006-01-21 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/main.cc: cleanups
	* src/ntfs.cc: use ntfsfix for scanning.
	  run a simulation before performing an actual resize. more detailed
	  feedback.

2006-01-20 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/xfs.cc: updated copy to provide detailed feedback.

2006-01-20 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/jfs.cc: small fix with sequence of mount,remount,unmount